Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -155,9 +155,10 @@
    "id": "c4bd5e31-3c42-473e-be25-daafdd03fadb",
    "metadata": {},
    "source": [
-    " Series Problem - 2\n",
+    "# Series Problem - 2\n",
     "     i = 1   2   3   4   5   6    7    8    9    10 ...\n",
     " total = 1 - 3 + 5 - 7 + 9 - 11 + 13 - 15 + 17 - 19 + ...\n",
+    "\n",
     " Write a program in C++/Java/Python to print the first n terms of the series. Take integer n from the user."
    ]
   },
@@ -229,9 +230,193 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "3f75e9ea-ca1f-48db-9a20-0c50d19e02e4",
+   "metadata": {},
+   "source": [
+    "# Series Problem - 3\n",
+    "     i =   1   2   3   4   5   6    7    8    9    10 ...\n",
+    " total = - 1 + 3 - 5 + 7 - 9 + 11 - 13 + 15 - 17 + 19 + ...\n",
+    "\n",
+    " Write a program in C++/Java/Python to print the first n terms of the series. Take integer n from the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7e0af3e1-0362-4f38-acef-e6ac8b4a1274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of terms:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So for i = 1, term = -1...\n",
+      "So for i = 2, term = 3...\n",
+      "So for i = 3, term = -5...\n",
+      "So for i = 4, term = 7...\n",
+      "So for i = 5, term = -9...\n",
+      "So total = -5\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Please enter the number of terms: \"))\n",
+    "total = 0\n",
+    "for i in range(1, n + 1):\n",
+    "    term = ((-1) ** i) * (2 * i - 1)\n",
+    "    print(f\"So for i = {i}, term = {term}...\")\n",
+    "    total = total + term\n",
+    "print(\"So total =\", total)\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a88159bb-7bdf-41f5-b553-ad7ff1b6fee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of terms:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So total = -5\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optimization 1\n",
+    "# Subtract the square of negative odd terms from the square of positive odd terms to get the alternating sum.\n",
+    "\n",
+    "n = int(input(\"Please enter the number of terms: \"))\n",
+    "pos = n // 2\n",
+    "neg = (n + 1) // 2\n",
+    "total = pos ** 2 - neg ** 2\n",
+    "print(\"So total =\", total)\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "4a9feff1-44e7-4e61-86f1-abce8eed24a5",
+   "metadata": {},
+   "source": [
+    "# Series Problem - 4\n",
+    "     i =   1    2    3    4    5    6    7 ...\n",
+    " total =   1! + 2! + 3! + 4! + 5! + 6! + 7! + \n",
+    "\n",
+    " Write a program in C++/Java/Python to print the first n terms of the series. Take integer n from the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7f81d7b5-28d1-4088-9f0c-30a2190fea2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of terms:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So for i = 1, term = 1...\n",
+      "So for i = 2, term = 2...\n",
+      "So for i = 3, term = 6...\n",
+      "So for i = 4, term = 24...\n",
+      "So for i = 5, term = 120...\n",
+      "So total = 153\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logic - Sum the factorials of all numbers from 1 to n to get the total.\n",
+    "\n",
+    "n = int(input(\"Please enter the number of terms: \"))\n",
+    "total = 0\n",
+    "fact = 1\n",
+    "for i in range(1, n + 1):\n",
+    "    total = total + fact\n",
+    "    print(f\"So for i = {i}, term = {fact}...\")\n",
+    "    fact = fact * (i + 1)\n",
+    "print(\"So total =\", total)\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f8bd87a6-5beb-45af-91f6-ab258ab154bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of terms:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So total = 153\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optimization - 1\n",
+    "\n",
+    "n = int(input(\"Please enter the number of terms: \"))\n",
+    "total = 0\n",
+    "fact = 1\n",
+    "for i in range(1, n + 1):\n",
+    "    fact *= i\n",
+    "    total += fact\n",
+    "print(\"So total =\", total)\n",
+    "print(\"End of the program...\")\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "dd7e3252-4064-4690-8468-af88d57afe75",
+   "metadata": {},
+   "source": [
+    "# Series Problem - 5\n",
+    "     i =   1    2    3    4    5     6     7 ...\n",
+    " total =   1! + 3! + 5! + 7! + 9! + 11! + 13! + \n",
+    "\n",
+    " Write a program in C++/Java/Python to print the first n terms of the series. Take integer n from the user."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9dba362-6c47-4ac5-be75-9afe06d32d12",
+   "id": "44230674-4e8c-473e-8893-de34379be736",
    "metadata": {},
    "outputs": [],
    "source": []
