Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -577,9 +577,212 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "758f3197-877f-40c6-9f0d-696e7a571809",
+   "metadata": {},
+   "source": [
+    "# Pattern problem - 1\n",
+    "n = 6           i   .   *\n",
+    "              -------------\n",
+    ".....*          1   5   1      (i, n)\n",
+    "....***         2   4   3 . => (n - i)\n",
+    "...*****        3   3   5\n",
+    "..*******       4   2   7 * => (2 * i - 1)\n",
+    ".*********      5   1   9\n",
+    "***********     6   0  11\n",
+    "              -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bd51c15d-e87e-4521-89e7-6c9f2ff0b718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of layers:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".......*\n",
+      "......***\n",
+      ".....*****\n",
+      "....*******\n",
+      "...*********\n",
+      "..***********\n",
+      ".*************\n",
+      "***************\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Please enter the number of layers: \"))\n",
+    "for i in range(1, n + 1):\n",
+    "    print(\".\" * (n - i) + \"*\" * (2 * i - 1))\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "caf24ae8-6d57-44ee-be51-efb5c8fb0b6c",
+   "metadata": {},
+   "source": [
+    "# Pattern problem - 2\n",
+    "n = 6           i   .   *\n",
+    "              -------------\n",
+    "***********     1   0  11      (i, n)\n",
+    ".*********      2   1   9 . => (i - 1)\n",
+    "..*******       3   2   7\n",
+    "...*****        4   3   5 * => (2 * (n - i) + 1)\n",
+    "....***         5   4   3\n",
+    ".....*          6   5   1\n",
+    "              -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c2ed6585-8a03-43b3-9532-248b7f6909ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of layers:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***************\n",
+      ".*************\n",
+      "..***********\n",
+      "...*********\n",
+      "....*******\n",
+      ".....*****\n",
+      "......***\n",
+      ".......*\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Please enter the number of layers: \"))\n",
+    "for i in range(1, n + 1):\n",
+    "    print(\".\" * (i - 1) + \"*\" * (2 * (n - i) + 1))\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "16856fef-2759-4dbb-a4c9-7ce34086c37d",
+   "metadata": {},
+   "source": [
+    "# Pattern problem - 3\n",
+    "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
+    "              -------------\n",
+    ".....*          1   5   1      (i, n, m)\n",
+    "....***         2   4   3 . => (m - i)\n",
+    "...*****        3   3   5\n",
+    "..*******       4   2   7 * => (2 * i - 1)\n",
+    ".*********      5   1   9\n",
+    "***********   __6___0__11__\n",
+    ".*********      7   1   9\n",
+    "..*******       8   2   7 . => (i - m)\n",
+    "...*****        9   3   5\n",
+    "....***        10   4   3 * => (2 * (n - i) + 1)\n",
+    ".....*         11   5   1\n",
+    "              -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "32fb1a6a-58f8-4939-ac1a-4e04e9e6bd86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers:  8\n",
+      "Please enter the ODD number of layers:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "....*\n",
+      "...***\n",
+      "..*****\n",
+      ".*******\n",
+      "*********\n",
+      ".*******\n",
+      "..*****\n",
+      "...***\n",
+      "....*\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if (n % 2 == 1): break\n",
+    "m = (n + 1) // 2\n",
+    "for i in range(1, n + 1):\n",
+    "    if (i <= m): b = (m - i); s = (2 * i - 1)\n",
+    "    else: b = (i - m); s = (2 * (n - i) + 1)\n",
+    "    print(\".\" * b + \"*\" * s)\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca998d5-0ce5-4a2a-9354-e06b682d5f73",
+   "id": "e1bc82c6-6237-4c37-a11a-773a23666d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pattern problem - 4\n",
+    "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
+    "              -------------\n",
+    "***********     1   0  11      (i, n, m)\n",
+    ".*********      2   1   9 . => (i - 1)\n",
+    "..*******       3   2   7\n",
+    "...*****        4   3   5 * => (2 * (m - i) + 1)\n",
+    "....***         5   4   3\n",
+    ".....*        __6___5___1__\n",
+    "....***         7   4   3\n",
+    "...*****        8   3   5 . => (n - i)\n",
+    "..*******       9   2   7\n",
+    ".*********     10   1   9 * => (2 * (i - m) + 1)\n",
+    "***********    11   0  11\n",
+    "              -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffccb214-e1bb-412b-9530-936027d4b3dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77de8523-a5cf-4209-b4ca-abf531e3dee2",
    "metadata": {},
    "outputs": [],
    "source": []
