Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -748,11 +748,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1bc82c6-6237-4c37-a11a-773a23666d1d",
+   "cell_type": "raw",
+   "id": "568933ef-9376-4f7b-9edc-8445a535522d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Pattern problem - 4\n",
     "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
@@ -773,16 +771,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ffccb214-e1bb-412b-9530-936027d4b3dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers:  8\n",
+      "Please enter the ODD number of layers:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*********\n",
+      ".*******\n",
+      "..*****\n",
+      "...***\n",
+      "....*\n",
+      "...***\n",
+      "..*****\n",
+      ".*******\n",
+      "*********\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if (n % 2 == 1): break\n",
+    "m = (n + 1) // 2\n",
+    "for i in range(1, n + 1):\n",
+    "    if (i <= m): b = (i - 1); s = (2 * (m - i) + 1)\n",
+    "    else: b = (n - i); s = (2 * (i - m) + 1)\n",
+    "    print(\".\" * b + \"*\" * s)\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "1667a42f-78fb-4a67-997a-79938fc795d1",
+   "metadata": {},
+   "source": [
+    "# ASCII Codes (8 bit representaion)\n",
+    "* Normal ASCII Codes: (0 to 127) Printable\n",
+    "A => 65, B => 66, ..., Z => 90\n",
+    "a => 97, b => 98, ..., z => 122\n",
+    "0 => 48, 1 => 49, ..., 9 => 57\n",
+    "Space/Blank => 32, Enter => 13, Tab => 8, Back Space => 9\n",
+    "\n",
+    "* Extended ASCII Codes: (128 to 255) Non-Printable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f196222a-f44d-4830-9897-9cc82cf97395",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Z a z\n",
+      "65 90 97 122\n",
+      "<class 'str'> <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chr(65), chr(90), chr(97), chr(122))\n",
+    "print(ord(\"A\"), ord(\"Z\"), ord(\"a\"), ord(\"z\"))\n",
+    "print(type(\"Zebra\"), type(\"Z\"))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d9b4fc65-8597-4e19-8a2b-186e3cf98a44",
+   "metadata": {},
+   "source": [
+    "# Pattern problem - 5\n",
+    "n = 6           i   .   *\n",
+    "              -------------\n",
+    ".....A          1   5   1      (i, n)\n",
+    "....BBB         2   4   3 . => (n - i)\n",
+    "...CCCCC        3   3   5\n",
+    "..DDDDDDD       4   2   7 * => (2 * i - 1)\n",
+    ".EEEEEEEEE      5   1   9\n",
+    "FFFFFFFFFFF     6   0  11\n",
+    "              -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7e5cfa27-227b-45bd-b0c5-635c4f7487fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of layers:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".......A\n",
+      "......BBB\n",
+      ".....CCCCC\n",
+      "....DDDDDDD\n",
+      "...EEEEEEEEE\n",
+      "..FFFFFFFFFFF\n",
+      ".GGGGGGGGGGGGG\n",
+      "HHHHHHHHHHHHHHH\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Please enter the number of layers: \"))\n",
+    "for i in range(1, n + 1):\n",
+    "    print(\".\" * (n - i) + chr(64 + i) * (2 * i - 1))\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "5b043d58-c6dd-4b13-9ebd-e35f8dd1b0a0",
+   "metadata": {},
+   "source": [
+    "# Pattern problem - 6\n",
+    "n = 11 (ODD)    i   .1  .2   m = (n + 1) // 2 = 6\n",
+    "              -------------\n",
+    ".....*          1   5   NA      (i, n, m)\n",
+    "....*.*         2   4   1 .1 => (m - i)\n",
+    "...*...*        3   3   3\n",
+    "..*.....*       4   2   5 .2 => (2 * i - 3)\n",
+    ".*.......*      5   1   7\n",
+    "*.........*   __6___0___9__\n",
+    ".*.......*      7   1   7\n",
+    "..*.....*       8   2   5 .1 => (i - m)\n",
+    "...*...*        9   3   3\n",
+    "....*.*        10   4   1 .2 => (2 * (n - i) - 1)\n",
+    ".....*         11   5   NA\n",
+    "              -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cf894534-e1bd-465a-801b-6354323981f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers:  8\n",
+      "Please enter the ODD number of layers:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "....*\n",
+      "...*.*\n",
+      "..*...*\n",
+      ".*.....*\n",
+      "*.......*\n",
+      ".*.....*\n",
+      "..*...*\n",
+      "...*.*\n",
+      "....*\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if (n % 2 == 1): break\n",
+    "m = (n + 1) // 2\n",
+    "for i in range(1, n + 1):\n",
+    "    if (i <= m): b1 = (m - i); b2 = (2 * i - 3)\n",
+    "    else: b1 = (i - m); b2 = (2 * (n - i) - 1)\n",
+    "    print(\".\" * b1 + \"*\", end = \"\")\n",
+    "    if (i != 1 and i != n):\n",
+    "        print(\".\" * b2 + \"*\")\n",
+    "    else:\n",
+    "        print()\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d8ae26a6-2c8f-46dd-93ed-07db266c2f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome,To all...Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome\",\"To all\", sep = \",\", end = \"...\")\n",
+    "print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c0b9d67b-d948-4fe0-aed4-7844442715aa",
+   "metadata": {},
+   "source": [
+    "n = 9 (ODD)  m = (n + 1) // 2 = 5\n",
+    "\n",
+    "      1  2  3  4  5  6  7  8  9        i  ll  ul\n",
+    "---------------------------------    -------------\n",
+    "1  |  1  1  1  1  1  1  1  1  1        1   1   9        (n, i)\n",
+    "2  |  1  2  2  2  2  2  2  2  1        2   2   8  ll => i\n",
+    "3  |  1  2  3  3  3  3  3  2  1        3   3   7  ul => (n - i + 1)\n",
+    "4  |  1  2  3  4  4  4  3  2  1        4   4   6\n",
+    "5  |  1  2  3  4  5  4  3  2  1      __5___5___5__\n",
+    "6  |  1  2  3  4  4  4  3  2  1        6   4   6\n",
+    "7  |  1  2  3  3  3  3  3  2  1        7   3   7  ll => (n - i + 1)\n",
+    "8  |  1  2  2  2  2  2  2  2  1        8   2   8  ul => i\n",
+    "9  |  1  1  1  1  1  1  1  1  1        9   1   9\n",
+    "---------------------------------    -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "61f3ead0-7f2c-440d-8ee1-a8cf38b6939a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers:  8\n",
+      "Please enter the ODD number of layers:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1   1   1   1   1   1   1   1   1\n",
+      "   1   2   2   2   2   2   2   2   1\n",
+      "   1   2   3   3   3   3   3   2   1\n",
+      "   1   2   3   4   4   4   3   2   1\n",
+      "   1   2   3   4   5   4   3   2   1\n",
+      "   1   2   3   4   4   4   3   2   1\n",
+      "   1   2   3   3   3   3   3   2   1\n",
+      "   1   2   2   2   2   2   2   2   1\n",
+      "   1   1   1   1   1   1   1   1   1\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while (True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if (n % 2 == 1): break\n",
+    "m = (n + 1) // 2\n",
+    "for row in range(1, n + 1):\n",
+    "    if (row <= m): ll = row; ul = (n - row + 1)\n",
+    "    else: ll = (n - row + 1); ul = row\n",
+    "    term = 1\n",
+    "    for col in range(1, n + 1):\n",
+    "        print(\"%4d\"%(term), end = \"\")\n",
+    "        if (col < ll): term = term + 1\n",
+    "        if (col >= ul): term = term - 1\n",
+    "    print()\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9d25c47a-156e-4471-b8f8-6e87aa30577f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looping for i = 2\n",
+      "Looping for i = 3\n",
+      "Looping for i = 4\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# non-recursive factorial calculation function\n",
+    "def factorial_nr(num):\n",
+    "    if (num == 0 or num == 1):\n",
+    "        return 1\n",
+    "    fact = num\n",
+    "    for i in range(2, num):\n",
+    "        print(\"Looping for i =\", i)\n",
+    "        fact *= i\n",
+    "    return fact\n",
+    "\n",
+    "print(factorial_nr(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ff1caf89-8328-42b1-b69d-771bf52b6f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recursive factorial calculation function\n",
+    "def factorial_r(num):\n",
+    "    if (num == 0 or num == 1):  # base case\n",
+    "        return 1\n",
+    "    return num * factorial_r(num - 1)  # recursive case\n",
+    "\n",
+    "# print(factorial_nr(1))\n",
+    "# print(factorial_nr(4))\n",
+    "print(factorial_r(5))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77de8523-a5cf-4209-b4ca-abf531e3dee2",
+   "id": "2a1891af-54eb-4f6c-91b1-6de0900903db",
    "metadata": {},
    "outputs": [],
    "source": []
