--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -1118,8 +1118,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "2a1891af-54eb-4f6c-91b1-6de0900903db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "120\n",
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recursive factorial calculation lambda function\n",
+    "factorial_lr = lambda num: 1 if (num == 0 or num == 1) else num * factorial_lr(num - 1)\n",
+    "print(factorial_lr(4))\n",
+    "print(factorial_lr(5))\n",
+    "print(factorial_lr(6))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "4ce12694-ead5-4f7b-aa24-0555d359627c",
+   "metadata": {},
+   "source": [
+    "# Series Problem - 7\n",
+    "#     i =   1   2   3   4   5   6   7 ...\n",
+    "# total =   4 + 7 + 4 + 7 + 4 + 7 + 4 + \n",
+    "\n",
+    "# Write a program in C++/Java/Python to print the first n terms of the series. Take integer n from the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "96b1d185-27b2-4d62-b280-caa1182655a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the number of terms:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For i = 1, term = 4 and total = 4...\n",
+      "For i = 2, term = 7 and total = 11...\n",
+      "For i = 3, term = 4 and total = 15...\n",
+      "For i = 4, term = 7 and total = 22...\n",
+      "For i = 5, term = 4 and total = 26...\n",
+      "So the final total is 26...\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Please enter the number of terms: \"))\n",
+    "term = 4\n",
+    "total = 0\n",
+    "for i in range(1, n + 1):\n",
+    "    total = total + term\n",
+    "    print(f\"For i = {i}, term = {term} and total = {total}...\")\n",
+    "    term = term ^ 3\n",
+    "    # term = term + ((-1) ** (i + 1)) * 3\n",
+    "    # term = int(5.5 + ((-1) ** (i + 1)) * 1.5)\n",
+    "    # term = (term * 2 - 1) % 9\n",
+    "    # term = 4 if (total % 11 == 0) else 7\n",
+    "    # term = 4 if (term % 2 == 1) else 7\n",
+    "    # term = (lambda term:{4:7,7:4}.get(term))(term)\n",
+    "    # term = 4 if (i % 2 == 0) else 7\n",
+    "    # term = 28 // term\n",
+    "    # term = 11 - term\n",
+    "    # term = 4 if (term == 7) else 7  # ternary operator\n",
+    "    # if (term == 4):\n",
+    "    #     term = 7\n",
+    "    # else:\n",
+    "    #     term = 4\n",
+    "print(f\"So the final total is {total}...\")\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "b2fb16f3-ee12-4c16-9d56-f96737a74ea3",
+   "metadata": {},
+   "source": [
+    "0 xor 0 = 0\n",
+    "0 xor 1 = 1\n",
+    "1 xor 0 = 1\n",
+    "1 xor 1 = 0\n",
+    "\n",
+    "a xor 0 = a\n",
+    "a xor 1 = a'\n",
+    "   4 => 100\n",
+    "        011 => 3\n",
+    "   xor  ---\n",
+    "   7 => 111"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45c88cc6-e88a-4c69-8fc2-c92d8736c345",
+   "metadata": {},
+   "source": [
+    "# Number Theory & Mathematical Problems\n",
+    "## Krishnamurthy Number\n",
+    "1. 📌 Problem Statement: A number is a Krishnamurthy number if the sum of the factorials of its digits equals the number itself.\n",
+    "2. ✅ Example 1: 145 → (1! + 4! + 5!) = 145\n",
+    "3. ✅ Example 2: 40585 → (4! + 0! + 5! + 8! + 5!) = 40585"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "edd030ec-dae6-4139-ad70-baa0d9173e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 is NOT a Krishnamurthy Number...\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(num):\n",
+    "    fact = 1\n",
+    "    if (num == 0 or num == 1): return fact\n",
+    "    for i in range(2, num + 1):\n",
+    "        fact *= i\n",
+    "    return fact\n",
+    "\n",
+    "num = int(input(\"Please enter a number: \"))\n",
+    "total = sum([factorial(int(digit)) for digit in str(num)])\n",
+    "if (num == total): print(f\"{num} is a Krishnamurthy Number...\")\n",
+    "else: print(f\"{num} is NOT a Krishnamurthy Number...\")\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ba05801e-0c26-4b50-8ed6-e290c4fb644a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120 720\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.factorial(5), math.factorial(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3719d944-c6a5-4b94-ad67-d16ab2308e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is a Krishnamurthy Number...\n",
+      "2 is a Krishnamurthy Number...\n",
+      "145 is a Krishnamurthy Number...\n",
+      "40585 is a Krishnamurthy Number...\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "for num in range(1, 500000):\n",
+    "    total = sum([math.factorial(int(digit)) for digit in str(num)])\n",
+    "    if (num == total): print(f\"{num} is a Krishnamurthy Number...\")\n",
+    "    # else: print(f\"{num} is NOT a Krishnamurthy Number...\")\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9043f00-ebb7-4dff-afde-a3167a1f4b15",
+   "metadata": {},
+   "source": [
+    "# Madam Number (Palindrome Number)\n",
+    "1. 📌 Problem Statement: A number is a Madam number if it remains the same when reversed.\n",
+    "2. ✅ Example 1: 121 → Reverse = 121 ✅\n",
+    "3. ✅ Example 2: 1331 → Reverse = 1331 ✅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1143623d-aee1-4122-bd8e-d69cd865092c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "university ytisrevinu\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystr = \"university\"\n",
+    "print(mystr, mystr[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "63794f60-f1ed-4ae4-8048-060d57c5b907",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter one integer number:  121\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121 is a Madam Number...\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = input(\"Please enter one integer number: \")\n",
+    "if (num == num[::-1]):\n",
+    "    print(f\"{num} is a Madam Number...\")\n",
+    "else:\n",
+    "    print(f\"{num} is NOT a Madam Number...\")\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e4b064b-d700-4d6f-a5fc-50897f2baa22",
+   "metadata": {},
+   "source": [
+    "# Armstrong Number\n",
+    "1. 📌 Problem Statement: A number is Armstrong if the sum of its digits raised to the power of its length equals the number.\n",
+    "2. ✅ Example 1: 153 → (1³ + 5³ + 3³) = 153\n",
+    "3. ✅ Example 2: 9474 → (9⁴ + 4⁴ + 7⁴ + 4⁴) = 9474"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5974aa9c-5db5-45f2-9605-dd2c69007d40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1,    2,    3,    4,    5,    6,    7,    8,    9,  153,  370,  371,  407, 1634, 8208, 9474, \n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1, 10001):\n",
+    "    num_of_digits = len(str(num))\n",
+    "    total = sum([int(digit) ** num_of_digits for digit in str(num)])\n",
+    "    if (total == num): print(\"%4d\"%(num), end = \", \")\n",
+    "print(\"\\nEnd of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1ae6ae8-b566-4a76-bd50-014376565130",
+   "metadata": {},
+   "source": [
+    "# Perfect Number\n",
+    "1. 📌 Problem Statement: A number is perfect if the sum of its proper divisors equals the number.\n",
+    "2. ✅ Example 1: 6 → (1 + 2 + 3) = 6\n",
+    "3. ✅ Example 2: 28 → (1 + 2 + 4 + 7 + 14) = 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f10379c7-d7d2-4030-9556-e37d372ef538",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 is a Perfect Number...\n",
+      "28 is a Perfect Number...\n",
+      "496 is a Perfect Number...\n",
+      "8128 is a Perfect Number...\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(2, 10000):\n",
+    "    total = 1\n",
+    "    for factor in range(2, int(num ** 0.5) + 1):\n",
+    "        if (num % factor == 0): total = total + factor + (num // factor)\n",
+    "    if (int(num ** 0.5) == (num ** 0.5)):\n",
+    "        total -= int(num ** 0.5)\n",
+    "    if (total == num): print(f\"{num} is a Perfect Number...\")\n",
+    "print(\"End of the program...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2735410f-880e-4f5f-b2a9-b05b53b4b360",
    "metadata": {},
    "outputs": [],
    "source": []
