Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -227,12 +227,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "675f75bc-e05e-441b-a506-239b40d88c2c",
+   "cell_type": "raw",
+   "id": "c104d1fa-5022-43cd-8c64-f5695fdcd345",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Boolean Identities:\n",
+    "-------------------\n",
+    "a and 0 = 0, a and 1 = a, a and a = a, a and a' = 0\n",
+    "a or 0 = a, a or 1 = 1, a or a = a, a or a' = 1\n",
+    "a xor 0 = a, a and 1 = a', a xor a = 0, a and a' = 1\n",
+    "\n",
+    "4 = 100\n",
+    "xor 011 => 3\n",
+    "    ---\n",
+    "7 = 111"
+   ]
   },
   {
    "cell_type": "code",
