Add pattern problem and solution for Day 1
Introduced a new raw cell describing a pattern problem and added code to generate the specified pattern for a user-provided odd integer. The code prompts for input, validates oddness, and prints the pattern as described.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -244,20 +244,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c8088a5-636d-4e87-89b1-a5df8c49f1e6",
+   "cell_type": "raw",
+   "id": "2cde1913-16bc-4780-b6fb-adc01ae3eb14",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Pattern Probelm - 1\n",
+    "n = 11 (User given ODD integer number)\n",
+    "\n",
+    ".....*          \n",
+    "....***         \n",
+    "...*****        \n",
+    "..*******       \n",
+    ".*********      \n",
+    "***********   \n",
+    ".*********      \n",
+    "..*******       \n",
+    "...*****        \n",
+    "....***        \n",
+    ".....*   \n",
+    "Generate this pattern "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "b410c5af-db46-43eb-a1c1-9fe7929b1a2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers: 11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".....*\n",
+      "....***\n",
+      "...*****\n",
+      "..*******\n",
+      ".*********\n",
+      "***********\n",
+      ".*********\n",
+      "..*******\n",
+      "...*****\n",
+      "....***\n",
+      ".....*\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers:\"))\n",
+    "    if n % 2 == 1:\n",
+    "        break\n",
+    "m = (n + 1) // 2\n",
+    "for i in range(1, n + 1):\n",
+    "    if (i <= m):\n",
+    "        b = (m - i)\n",
+    "        s = (2 * i - 1)\n",
+    "    else:\n",
+    "        b = (i - m)\n",
+    "        s = (2 * (n - i) + 1)\n",
+    "    print(\".\" * b + \"*\" * s)\n",
+    "print(\"End of the program...\")"
+   ]
   },
   {
    "cell_type": "code",
