--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -248,7 +248,7 @@
    "id": "2cde1913-16bc-4780-b6fb-adc01ae3eb14",
    "metadata": {},
    "source": [
-    "# Pattern Probelm - 1\n",
+    "# Pattern Problem - 1\n",
     "n = 11 (User given ODD integer number)\n",
     "\n",
     ".....*          \n",
@@ -262,7 +262,28 @@
     "...*****        \n",
     "....***        \n",
     ".....*   \n",
-    "Generate this pattern "
+    "Generate this pattern using only 1 loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db7b7cef-fe8f-4089-9461-e1ade73f3a7a",
+   "metadata": {},
+   "source": [
+    "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
+    "              -------------\n",
+    ".....*          1   5   1      (i, n, m)\n",
+    "....***         2   4   3 . => (m - i)\n",
+    "...*****        3   3   5\n",
+    "..*******       4   2   7 * => (2 * i - 1)\n",
+    ".*********      5   1   9\n",
+    "***********   __6___0__11__\n",
+    ".*********      7   1   9\n",
+    "..*******       8   2   7 . => (i - m)\n",
+    "...*****        9   3   5\n",
+    "....***        10   4   3 * => (2 * (n - i) + 1)\n",
+    ".....*         11   5   1\n",
+    "              -------------"
    ]
   },
   {
@@ -334,6 +355,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b1cfab7-1d7f-41f1-9e2a-b1dd50dd1924",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54bdb5c0-8e98-41ba-b147-11e51dd2948d",
    "metadata": {},
    "outputs": [],
    "source": []
