Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -266,8 +266,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "db7b7cef-fe8f-4089-9461-e1ade73f3a7a",
+   "cell_type": "raw",
+   "id": "9583d2c4-dcb1-4307-bd02-5367e3f369b8",
    "metadata": {},
    "source": [
     "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
@@ -366,6 +366,56 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4624e9-7801-46e1-9031-e39a23021615",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90a9e3d5-ff43-454a-93c7-19b7ec8d4458",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31e0f466-a48c-467c-816c-e059ef5f84b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c1397c-09d3-436c-bc1b-f5e2d96984db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "329c1193-06ff-48be-ac41-99a5aefb8a7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if (n % 2 == 1): break\n",
+    "m = (n + 1) // 2\n",
+    "for i in range(1, n + 1):\n",
+    "    if (i <= m): b = (i - 1); s = (2 * (m - i) + 1)\n",
+    "    else: b = (n - i); s = (2 * (i - m) + 1)\n",
+    "    print(\".\" * b + \"*\" * s)\n",
+    "print(\"End of the program...\")"
+   ]
   }
  ],
  "metadata": {
