--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -244,46 +244,50 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2cde1913-16bc-4780-b6fb-adc01ae3eb14",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "770642e8-4c38-4188-b6d9-1c814e6dc8f7",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Pattern Problem - 1\n",
-    "n = 11 (User given ODD integer number)\n",
+    "# # Pattern Problem - 1\n",
+    "# n = 11 (User given ODD integer number)\n",
     "\n",
-    ".....*          \n",
-    "....***         \n",
-    "...*****        \n",
-    "..*******       \n",
-    ".*********      \n",
-    "***********   \n",
-    ".*********      \n",
-    "..*******       \n",
-    "...*****        \n",
-    "....***        \n",
-    ".....*   \n",
-    "Generate this pattern using only 1 loop"
+    "# .....*          \n",
+    "# ....***         \n",
+    "# ...*****        \n",
+    "# ..*******       \n",
+    "# .*********      \n",
+    "# ***********   \n",
+    "# .*********      \n",
+    "# ..*******       \n",
+    "# ...*****        \n",
+    "# ....***        \n",
+    "# .....*   \n",
+    "# Generate this pattern using only 1 loop"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "9583d2c4-dcb1-4307-bd02-5367e3f369b8",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfd1ea42-d599-4a1d-adc7-58c4a68ab0e8",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
-    "              -------------\n",
-    ".....*          1   5   1      (i, n, m)\n",
-    "....***         2   4   3 . => (m - i)\n",
-    "...*****        3   3   5\n",
-    "..*******       4   2   7 * => (2 * i - 1)\n",
-    ".*********      5   1   9\n",
-    "***********   __6___0__11__\n",
-    ".*********      7   1   9\n",
-    "..*******       8   2   7 . => (i - m)\n",
-    "...*****        9   3   5\n",
-    "....***        10   4   3 * => (2 * (n - i) + 1)\n",
-    ".....*         11   5   1\n",
-    "              -------------"
+    "# n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
+    "#               -------------\n",
+    "# .....*          1   5   1      (i, n, m)\n",
+    "# ....***         2   4   3 . => (m - i)\n",
+    "# ...*****        3   3   5\n",
+    "# ..*******       4   2   7 * => (2 * i - 1)\n",
+    "# .*********      5   1   9\n",
+    "# ***********   __6___0__11__\n",
+    "# .*********      7   1   9\n",
+    "# ..*******       8   2   7 . => (i - m)\n",
+    "# ...*****        9   3   5\n",
+    "# ....***        10   4   3 * => (2 * (n - i) + 1)\n",
+    "# .....*         11   5   1\n",
+    "#               -------------"
    ]
   },
   {
