--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -268,6 +268,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77616e9b-a623-4936-9e34-3a8fb9c4d547",
+   "metadata": {},
+   "source": [
+    "## Tracing Table for Pattern - 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dfd1ea42-d599-4a1d-adc7-58c4a68ab0e8",
@@ -345,15 +353,108 @@
    "id": "69e9e2b9-e137-463b-b698-023c4c36c079",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pattern Problem-2\n",
+    "n = 11 (User given ODD integer number)    \n",
+    "                                \n",
+    ".....*             \n",
+    "....*.*            \n",
+    "...*...*           \n",
+    "..*.....*          \n",
+    ".*.......*         \n",
+    "*.........*       \n",
+    ".*.......*         \n",
+    "..*.....*          \n",
+    "...*...*           \n",
+    "....*.*           \n",
+    ".....*            \n",
+    "                  \n",
+    "Generate this pattern using a single loop construct for any odd value for n."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd2dcef-0306-41f0-a342-e5af261bb2fb",
+   "metadata": {},
+   "source": [
+    "## Tracing Table for Pattern - 2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a9c726-7629-451b-be34-c06fce08b036",
+   "id": "56f8545d-0f65-4287-9194-bf85b046100e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 11 (User given ODD integer number)    \n",
+    "                                \n",
+    ".....*             \n",
+    "....*.*            \n",
+    "...*...*           \n",
+    "..*.....*          \n",
+    ".*.......*         \n",
+    "*.........*       \n",
+    ".*.......*         \n",
+    "..*.....*          \n",
+    "...*...*           \n",
+    "....*.*           \n",
+    ".....*            \n",
+    "                  \n",
+    "Generate this pattern using a single loop construct for any odd value for n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c6a9c726-7629-451b-be34-c06fce08b036",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers:  11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".....*\n",
+      "....*.*\n",
+      "...*...*\n",
+      "..*.....*\n",
+      ".*.......*\n",
+      "*.........*\n",
+      ".*.......*\n",
+      "..*.....*\n",
+      "...*...*\n",
+      "....*.*\n",
+      ".....*\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if (n % 2 == 1): break\n",
+    "m = (n + 1) // 2\n",
+    "for i in range(1, n + 1):\n",
+    "    if (i <= m): \n",
+    "        b1 = (m - i)\n",
+    "        b2 = (2 * i - 3)\n",
+    "    else: \n",
+    "        b1 = (i - m)\n",
+    "        b2 = (2 * (n - i) - 1)\n",
+    "    print(\".\" * b1 + \"*\", end = \"\")\n",
+    "    if (i != 1 and i != n):\n",
+    "        print(\".\" * b2 + \"*\")\n",
+    "    else:\n",
+    "        print()\n",
+    "print(\"End of the program...\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -409,17 +510,15 @@
    "id": "329c1193-06ff-48be-ac41-99a5aefb8a7c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "while(True):\n",
-    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
-    "    if (n % 2 == 1): break\n",
-    "m = (n + 1) // 2\n",
-    "for i in range(1, n + 1):\n",
-    "    if (i <= m): b = (i - 1); s = (2 * (m - i) + 1)\n",
-    "    else: b = (n - i); s = (2 * (i - m) + 1)\n",
-    "    print(\".\" * b + \"*\" * s)\n",
-    "print(\"End of the program...\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6be606a6-21c3-4fac-9c39-4e396a07dc55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
