--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -227,9 +227,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c104d1fa-5022-43cd-8c64-f5695fdcd345",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e946dbf5-766f-4c22-b784-1f4d3bd0f0c0",
    "metadata": {},
+   "outputs": [],
    "source": [
     "Boolean Identities:\n",
     "-------------------\n",
@@ -250,21 +252,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Pattern Problem - 1\n",
-    "# n = 11 (User given ODD integer number)\n",
+    "# Pattern Problem - 1\n",
+    "n = 11 (User given ODD integer number)\n",
     "\n",
-    "# .....*          \n",
-    "# ....***         \n",
-    "# ...*****        \n",
-    "# ..*******       \n",
-    "# .*********      \n",
-    "# ***********   \n",
-    "# .*********      \n",
-    "# ..*******       \n",
-    "# ...*****        \n",
-    "# ....***        \n",
-    "# .....*   \n",
-    "# Generate this pattern using only 1 loop"
+    ".....*          \n",
+    "....***         \n",
+    "...*****        \n",
+    "..*******       \n",
+    ".*********      \n",
+    "***********   \n",
+    ".*********      \n",
+    "..*******       \n",
+    "...*****        \n",
+    "....***        \n",
+    ".....*   \n",
+    "Generate this pattern using only 1 loop"
    ]
   },
   {
@@ -282,20 +284,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
-    "#               -------------\n",
-    "# .....*          1   5   1      (i, n, m)\n",
-    "# ....***         2   4   3 . => (m - i)\n",
-    "# ...*****        3   3   5\n",
-    "# ..*******       4   2   7 * => (2 * i - 1)\n",
-    "# .*********      5   1   9\n",
-    "# ***********   __6___0__11__\n",
-    "# .*********      7   1   9\n",
-    "# ..*******       8   2   7 . => (i - m)\n",
-    "# ...*****        9   3   5\n",
-    "# ....***        10   4   3 * => (2 * (n - i) + 1)\n",
-    "# .....*         11   5   1\n",
-    "#               -------------"
+    "n = 11 (ODD)    i   .   *   m = (n + 1) // 2 = 6\n",
+    "              -------------\n",
+    ".....*          1   5   1      (i, n, m)\n",
+    "....***         2   4   3 . => (m - i)\n",
+    "...*****        3   3   5\n",
+    "..*******       4   2   7 * => (2 * i - 1)\n",
+    ".*********      5   1   9\n",
+    "***********   __6___0__11__\n",
+    ".*********      7   1   9\n",
+    "..*******       8   2   7 . => (i - m)\n",
+    "...*****        9   3   5\n",
+    "....***        10   4   3 * => (2 * (n - i) + 1)\n",
+    ".....*         11   5   1\n",
+    "              -------------"
    ]
   },
   {
@@ -387,26 +389,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 11 (User given ODD integer number)    \n",
-    "                                \n",
-    ".....*             \n",
-    "....*.*            \n",
-    "...*...*           \n",
-    "..*.....*          \n",
-    ".*.......*         \n",
-    "*.........*       \n",
-    ".*.......*         \n",
-    "..*.....*          \n",
-    "...*...*           \n",
-    "....*.*           \n",
-    ".....*            \n",
-    "                  \n",
-    "Generate this pattern using a single loop construct for any odd value for n."
+    "n = 11 (ODD)    i   .1  .2   m = (n + 1) // 2 = 6\n",
+    "              -------------\n",
+    ".....*          1   5   NA      (i, n, m)\n",
+    "....*.*         2   4   1 .1 => (m - i)\n",
+    "...*...*        3   3   3\n",
+    "..*.....*       4   2   5 .2 => (2 * i - 3)\n",
+    ".*.......*      5   1   7\n",
+    "*.........*   __6___0___9__\n",
+    ".*.......*      7   1   7\n",
+    "..*.....*       8   2   5 .1 => (i - m)\n",
+    "...*...*        9   3   3\n",
+    "....*.*        10   4   1 .2 => (2 * (n - i) - 1)\n",
+    ".....*         11   5   NA\n",
+    "              -------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "c6a9c726-7629-451b-be34-c06fce08b036",
    "metadata": {},
    "outputs": [
