Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -463,15 +463,90 @@
    "id": "0b1cfab7-1d7f-41f1-9e2a-b1dd50dd1924",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pattern Problem-3\n",
+    "n = 11 (User given ODD integer number)    m = (n + 1) // 2 = 6\n",
+    "                   \n",
+    "                 \n",
+    "AAAAAAAAAAA        \n",
+    ".BBBBBBBBB         \n",
+    "..CCCCCCC          \n",
+    "...DDDDD           \n",
+    "....EEE          \n",
+    ".....F            \n",
+    "....GGG             \n",
+    "...HHHHH           \n",
+    "..IIIIIII          \n",
+    ".JJJJJJJJJ        \n",
+    "KKKKKKKKKKK       \n",
+    "                  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55d263cf-9e8a-441e-aa69-0cd2ace332d1",
+   "metadata": {},
+   "source": [
+    "## Tracing Table for Pattern - 3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54bdb5c0-8e98-41ba-b147-11e51dd2948d",
+   "id": "394cfacf-4da8-4450-b9fb-a8560a98bed3",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "54bdb5c0-8e98-41ba-b147-11e51dd2948d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers:  11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAAAAAAAAA\n",
+      ".BBBBBBBBB\n",
+      "..CCCCCCC\n",
+      "...DDDDD\n",
+      "....EEE\n",
+      ".....F\n",
+      "....GGG\n",
+      "...HHHHH\n",
+      "..IIIIIII\n",
+      ".JJJJJJJJJ\n",
+      "KKKKKKKKKKK\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    n = int(input(\"Please enter the ODD number of layers: \"))\n",
+    "    if n % 2 == 1:\n",
+    "        break\n",
+    "m = (n + 1) // 2 \n",
+    "for i in range(1, n + 1):\n",
+    "    if i <= m:\n",
+    "        dots = i - 1\n",
+    "        chars = n - 2 * (i - 1)\n",
+    "    else:\n",
+    "        dots = n - i\n",
+    "        chars = 2 * (i - m) + 1\n",
+    "    ch = chr(64 + i)  \n",
+    "    print(\".\" * dots + ch * chars)\n",
+    "print(\"End of the program...\")"
+   ]
   },
   {
    "cell_type": "code",
