Update Problem Solving - Day 1.ipynb

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -496,7 +496,23 @@
    "id": "394cfacf-4da8-4450-b9fb-a8560a98bed3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 11 (User given ODD integer number)    m = (n + 1) // 2 = 6\n",
+    "                   i   .   ch\n",
+    "                  -----------\n",
+    "AAAAAAAAAAA        1   0  11       (i, m, n)\n",
+    ".BBBBBBBBB         2   1   9  . => (i - 1)\n",
+    "..CCCCCCC          3   2   7\n",
+    "...DDDDD           4   3   5  ch => (2 * (m - i) + 1)\n",
+    "....EEE            5   4   3\n",
+    ".....F            _6___5___1_ \n",
+    "....GGG            7   4   3\n",
+    "...HHHHH           8   3   5  . => (n - i)\n",
+    "..IIIIIII          9   2   7\n",
+    ".JJJJJJJJJ        10   1   9  ch => (2 * (i - m) + 1)\n",
+    "KKKKKKKKKKK       11   0  11\n",
+    "                  -----------"
+   ]
   },
   {
    "cell_type": "code",
