Add Pattern problem 4 with tracing and solution
Introduced a new pattern problem (Pattern - 4) for odd integer layers, including a sample pattern, tracing table, and a code cell that generates the pattern based on user input. This enhances the notebook with an additional example and detailed explanation for pattern generation.

--- a/Problem Solving - Day 1.ipynb
+++ b/Problem Solving - Day 1.ipynb
@@ -570,15 +570,109 @@
    "id": "2b4624e9-7801-46e1-9031-e39a23021615",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pattern problem - 4\n",
+    "n = 9 (ODD integer, user given)\n",
+    "\n",
+    "     1  2  3  4  5  6  7  8  9\n",
+    "--------------------------------\n",
+    "1 |  1  1  1  1  1  1  1  1  1\n",
+    "2 |  1  2  2  2  2  2  2  2  1\n",
+    "3 |  1  2  3  3  3  3  3  2  1\n",
+    "4 |  1  2  3  4  4  4  3  2  1\n",
+    "5 |  1  2  3  4  5  4  3  2  1\n",
+    "6 |  1  2  3  4  4  4  3  2  1\n",
+    "7 |  1  2  3  3  3  3  3  2  1\n",
+    "8 |  1  2  2  2  2  2  2  2  1\n",
+    "9 |  1  1  1  1  1  1  1  1  1\n",
+    "--------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc7614c7-f07c-46cb-8106-9d70a3a543ee",
+   "metadata": {},
+   "source": [
+    "## Tracing table for Pattern - 4"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a9e3d5-ff43-454a-93c7-19b7ec8d4458",
+   "id": "65f7e1a6-d569-4c8f-9a7f-2aa9bb8c0322",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 9 (ODD)  m = (n + 1) // 2 = 5\n",
+    "\n",
+    "      1  2  3  4  5  6  7  8  9        i  ll  ul\n",
+    "---------------------------------    -------------\n",
+    "1  |  1  1  1  1  1  1  1  1  1        1   1   9        (n, i)\n",
+    "2  |  1  2  2  2  2  2  2  2  1        2   2   8  ll => i\n",
+    "3  |  1  2  3  3  3  3  3  2  1        3   3   7  ul => (n - i + 1)\n",
+    "4  |  1  2  3  4  4  4  3  2  1        4   4   6\n",
+    "5  |  1  2  3  4  5  4  3  2  1      __5___5___5__\n",
+    "6  |  1  2  3  4  4  4  3  2  1        6   4   6\n",
+    "7  |  1  2  3  3  3  3  3  2  1        7   3   7  ll => (n - i + 1)\n",
+    "8  |  1  2  2  2  2  2  2  2  1        8   2   8  ul => i\n",
+    "9  |  1  1  1  1  1  1  1  1  1        9   1   9\n",
+    "---------------------------------    -------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "90a9e3d5-ff43-454a-93c7-19b7ec8d4458",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter the ODD number of layers: 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1   1   1   1   1   1   1   1   1\n",
+      "   1   2   2   2   2   2   2   2   1\n",
+      "   1   2   3   3   3   3   3   2   1\n",
+      "   1   2   3   4   4   4   3   2   1\n",
+      "   1   2   3   4   5   4   3   2   1\n",
+      "   1   2   3   4   4   4   3   2   1\n",
+      "   1   2   3   3   3   3   3   2   1\n",
+      "   1   2   2   2   2   2   2   2   1\n",
+      "   1   1   1   1   1   1   1   1   1\n",
+      "End of the program...\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    n = int(input(\"Please enter the ODD number of layers:\"))\n",
+    "    if n % 2 == 1:\n",
+    "        break\n",
+    "m = (n + 1) // 2\n",
+    "for row in range(1, n + 1):\n",
+    "    if row <= m:\n",
+    "        ll = row\n",
+    "        ul = n - row + 1\n",
+    "    else:\n",
+    "        ll = n - row + 1\n",
+    "        ul = row\n",
+    "    term = 1\n",
+    "    for col in range(1, n + 1):\n",
+    "        print(\"%4d\"%(term), end = \"\")\n",
+    "        if col < ll: \n",
+    "            term = term + 1\n",
+    "        if col >= ul: \n",
+    "            term = term - 1\n",
+    "    print()\n",
+    "print(\"End of the program...\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -599,6 +693,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1c2837c2-98a8-4e79-8660-bd40a3f77a85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "329c1193-06ff-48be-ac41-99a5aefb8a7c",
    "metadata": {},
    "outputs": [],
@@ -608,6 +710,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6be606a6-21c3-4fac-9c39-4e396a07dc55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d93a24-249e-4935-b8c2-eca80b31d1f2",
    "metadata": {},
    "outputs": [],
    "source": []
